objects/CounselorNote__c.object
<CustomObject>
    <description>To manage and document client case notes related client cases.</description>
    <fields>
        <fullName>ClientCaseName__c</fullName>
        <formula>ClientCase__r.ClientCaseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Counselor Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration in Minutes</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>Calculate the end time based on start time and duration</description>
        <formula>StartDatetime__c +  (VALUE(TEXT(Duration__c))/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StartDatetime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Counselor Note</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Counselor Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counselor Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>